@@ -13,6 +13,7 @@ Version 1.0-dev
 - version of My Tester and PHP is shown at start now
 - BC break: TestCase::getJobs() now return array of Job
 - first parameter of Runner::addJob() can be instance of Job now
+- added methods startUp and shutDown to TestCase which are called at start/end of the suit
 
 Version 0.9.4c
 - fixed assertion same
